* Switch to `element.nodeName.charCodeAt(0)` instead of `element.nodeName.charAt(0)`. [jddalton]

* Remove `in` operator checks on control elements and test hasFocus() method exists before using it. [Diego Perini, jddalton]

* Avoid checking for strict booleans on control elements, they are actually strings if set in the source HTML as attribute values. [Diego Perini]

* Reduce code in normalize() and make forEachCall() use `++i` and replace repeated string in compileSelector() with `strEdgeSpace`. [jddalton]

* Ensure escaped commas are not parsed and simplify the `reSplitGroup` and `reSplitToken` regexps. [jddalton]

* Move Prototype unit test adapter into its own file. [jddalton]

* Cleanup jQuery adapters and ensure compiled variable `j` is the index of the current element being processed. [jddalton]

* Ensure querySelectorAll() is skipped on non-html documents. [jddalton]

* Fix byId() performance regression. [jddalton]

* Add feature test to `RE_BUGGY_QSAPI` for Safari 3.2 failing to find mixed cased classNames. [jddalton, Thomas Aylott]

* Ensure `BUGGY_GEBID` uses unique id values in its feature test. [jddalton]

* Add support for class, id, name, and tag selectors on non-html documents. [jddalton]

* Prepare byClass(), byId(), byName(), and byTag() to work with the `notHTML` private flag. [jddalton]

* Reduce the number of times String#toUpperCase is used in compilers and switch to `++i` in byName() and byId(). [Diego Perini, jddalton]

* Fix regression in `BUGGY_GEBTN` feature test. [jddalton]

* Fix `NATIVE_TRAVERSAL_API` fork of the structural pseudo-class section of compileSelector(). [jddalton]

* Fix typos in compileSelector() and getChildIndexesByTag() and clear `childIndexes` cache in match(). [jddalton]

* Remove variable `CSS_INDEX` because in IE the `sourceIndex` property can be 0 on disconnected nodes. [jddalton]

* Add cache back to getChildIndexesByTag(). [Diego Perini, jddalton]
